LIB-552 Fix Ask Us button text contrast

--- a/custom/modules/guides/css/guides.css
+++ b/custom/modules/guides/css/guides.css
@@ -33,6 +33,9 @@
   color: #fff;
   opacity: 0.7;
 }
+.title .btn {
+  font-weight: normal;
+}
 
 #moreInfo {
   min-width: 33%;
